--- a/css/style.css
+++ b/css/style.css
@@ -46,22 +46,52 @@ body{
  /* about the agriplus */
 
 .about-agriplus{
-    width: 100%;
-    margin: 40px;
-    /* display: grid;  */
+    margin: 40px 50px 20px 50px;
+    margin-bottom: 200px;
+    display: grid; 
      /* background-image: url("/images/image 1.png");  */
-    /* grid-template-columns: repeat(2, 1fr); */
+    grid-template-columns: repeat(2, 1fr); 
    
 }
-/* 
+
  .about-img{
     width: 100%;
-}  */
+}  
 .about-img img{
-    width: 50%;
-    float: right;
-    margin: 40px;
+    width: 100%;
+}
+.about-text{
+    width: 100%;
 }
 .about-text h1{
-    font-size: 60px;
+    font-size: 75px;
 } 
+
+
+
+
+
+
+/* About why we exist */
+.exists{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    width: 95%;
+    margin: auto;
+}
+
+.its-image{
+    width: 100%;
+}
+.its-image img{
+    width: 90%;
+}
+.about-exists{
+    width: 100%;
+}
+.about-exists h2{
+    font-size: 60px;
+}
+.about-exists p{
+    font-size: 35px;
+}
