--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ body{
     width: 100%;
 }
 .about-text h1{
-    font-size: 75px;
+    font-size: 77px;
 } 
 
 
@@ -114,11 +114,42 @@ body{
 .about-images{
     display: grid;
     grid-template-columns: repeat(4, 1fr); 
-    gap: 90px;
+    gap: 50px;
     width: 100%;
-    padding-bottom: 100px;
+
 }
 .image{
-    width: 440px;
+    width:100%;
     
+}
+.more{
+    text-align: right;
+    font-size: 25px;
+}
+
+
+/* about customer feedback */
+/* .about-customers{
+    display: flex;
+    justify-content: space-between;
+} */
+.about-customers h1{
+font-size: 40px;
+padding-bottom: 0px;
+
+}
+
+.feedback{
+    display: flex;
+    justify-content: space-around;
+}
+
+.customers p{
+   font-size: 50px;
+}
+.customers{
+    background-color: white;
+    box-shadow:25px 10px 5px grey;
+    width: 380px;
+    padding: 20px;
 }
