--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body{
     padding: 0;
+    margin: 0;
 }
 
 /* nav bar */
@@ -37,7 +38,7 @@ body{
 #button {
     background-color:#ED661F;
     color: white;
-    padding: 12px 25px 12px 25px;
+    padding: 20px 25px 20px 25px;
     border: none;
     font-size: 20px;
     font-weight: bold;
@@ -46,30 +47,57 @@ body{
  /* about the agriplus */
 
 .about-agriplus{
-    margin: 40px 50px 20px 50px;
-    margin-bottom: 200px;
-    display: grid; 
-     /* background-image: url("/images/image 1.png");  */
-    grid-template-columns: repeat(2, 1fr); 
-   
+    background: url("/images/image 1.png"); 
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    height: 121vh; 
+    display:flex;
+    
 }
 
- .about-img{
-    width: 100%;
-}  
 .about-img img{
     width: 100%;
+    float: right;
+    padding-top: 250px;
+    padding-right: 60px;
+    
 }
 .about-text{
     width: 100%;
+    padding-top: 250px;
+    padding-left: 100px;
+    
 }
 .about-text h1{
-    font-size: 77px;
+    font-size: 76px;
 } 
 
+.about-text p{
+    line-height: 30px;
+    font-size: 32px;
+}
+#btn{
+    background-color:#ED661F;
+    color: white;
+    padding: 30px 30px 30px 30px;
+    border: none;
+    font-size: 30px;
+    font-weight: bolder;
+}  
 
-
-
+/* about vendors */
+.vendors{
+    display: inline-flex;
+    gap: 80px;
+   font-size: 25px;
+   font-weight: bold;
+   justify-content: center;
+  background-color: white;
+  box-shadow: 3px 3px 2px grey;
+  padding: 40px 20px 40px 20px;
+}
+   
 
 
 /* About why we exist */
@@ -142,6 +170,7 @@ padding-bottom: 0px;
 .feedback{
     display: flex;
     justify-content: space-around;
+    margin-bottom: 200px;
 }
 
 .customers p{
@@ -166,4 +195,15 @@ padding-bottom: 0px;
     display: flex;
     font-size: 60px;
     color: #ED661F;
+}   
+
+
+/* About emails */
+
+.about-email{
+    text-align: center;
+    background-color: black;
+    padding:120px 200px;
+    color: white;
+
 }
