--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ body {
 #button {
     background-color: #ED661F;
     color: white;
-    padding: 30px 30px 30px 30px;
+    padding: 20px 30px 20px 30px;
     border: none;
     font-size: 20px;
     font-weight: bold;
@@ -66,7 +66,7 @@ body {
 
 @media only screen and (max-width:768px){
     #logo {
-        font-size: 26px;
+        font-size: 20px;
         font-weight: bold;
     }
 }
@@ -75,7 +75,7 @@ body {
 /* about the agriplus */
 
 .about-agriplus {
-    background: url("./images/image 1.png");
+    background: url("../images/image 1.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
